--- a/css/style-20.css
+++ b/css/style-20.css
@@ -11,6 +11,8 @@
     color: white;
     font-size: 20px;
     font-weight: bold;
+    box-sizing: border-box;
+    padding: 10px;
   }
 
   @keyframes spinAndColor {
